--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <h2>Student naam wijzigen</h2>
                 </div>
                 <div class="meta">
-                    <img src="img/placeholder.png">
+                    <img src="img/Octocat.png">
                 </div>
             </header>
 
@@ -80,7 +80,7 @@
                     <h2>Afbeeldingen toevoegen</h2>
                 </div>
                 <div class="meta">
-                    <img src="img/placeholder.png">
+                    <img src="img/Octocat.png">
                 </div>
             </header>
 
